[📝 Update] Api docs
